[project]
name = "pah-codes"
version = "0.2.0"
description = ""
authors = [
    {name = "Nicholas Clark",email = "nclark68@uwo.ca"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "pah_codes", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
